Fix GCS Sheet Display Item
Fix last item being pushed to the bottom of container in the GCS Character Sheets, by changing align content to 'start', everything's nicely listed from the start as it should be.

--- a/styles/simple.css
+++ b/styles/simple.css
@@ -1203,7 +1203,7 @@ body {
 #notes {
   display: grid;
   border: 1px solid black;
-  align-content: stretch;
+  align-content: start;
 }
 
 #reactions,
